[metadata]
name = huffmansvg
version = 0.0.1
author = Håkon Bårsaune
author_email = haakonbaa@gmail.com
description = Package for generating huffman trees in .svg format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haakonbaa/huffman-svg
project_urls =
    Bug Tracker = https://github.com/haakonbaa/huffman-svg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src